Styled the buttons, added a footer and did some other small styling

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div id="headingGroup" class="text-center d-lg-block mt-5">
               <div class="row justify-content-center">
                 <div class="col-10">
-                  <h1>Zandvoort aan Zee</h1>
-              <h2 class="font-italic">Amsterdam Beach</h2>
+                  <h1>A home away from home</h1>
+              <h2 class="font-italic">Find your favorite place to stay</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, quam vero numquam consectetur, porro, cum aliquam distinctio asperiores necessitatibus repudiandae commodi ab in dolores impedit quos voluptatum quas ipsam deleniti?
               Quas, laborum quis. Hic minus consectetur necessitatibus libero, corporis porro et est sed officiis tenetur. Ab unde dicta iusto debitis, labore corrupti sunt cumque molestias aliquid, nemo vel similique ut.
               Nihil reiciendis explicabo exercitationem atque repellendus similique natus perspiciatis iusto maxime omnis ipsa architecto eligendi quidem delectus deleniti provident cupiditate incidunt laboriosam magni, recusandae consequatur ea autem possimus aliquam. Iste.
@@ -96,8 +96,8 @@
             <div id="headingGroup" class="text-center d-lg-block mt-5">
               <div class="row">
                 <div class="col-10">
-                  <h1>Zandvoort aan Zee</h1>
-              <h2 class="font-italic">Amsterdam Beach</h2>
+                  <h1>How to get there?</h1>
+              <h2 class="font-italic">And other practical info</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, quam vero numquam consectetur, porro, cum aliquam distinctio asperiores necessitatibus repudiandae commodi ab in dolores impedit quos voluptatum quas ipsam deleniti?
               Quas, laborum quis. Hic minus consectetur necessitatibus libero, corporis porro et est sed officiis tenetur. Ab unde dicta iusto debitis, labore corrupti sunt cumque molestias aliquid, nemo vel similique ut.
               Nihil reiciendis explicabo exercitationem atque repellendus similique natus perspiciatis iusto maxime omnis ipsa architecto eligendi quidem delectus deleniti provident cupiditate incidunt laboriosam magni, recusandae consequatur ea autem possimus aliquam. Iste.
@@ -106,9 +106,20 @@
               </div>
             </div>
           </div>
-        </div>
+        
       
       </section>
+
+      <footer>
+        <span>
+          <p>This project is created and 
+            <a href="https://github.com/Bianca-Slavov/zandvoort-project" target="_blank">open-source coded</a>   
+          by
+            <a href="https://www.linkedin.com/in/biancaslavov/" target="_blank">Bianca Slavov</a>
+         </p>
+        </span>
+      </footer>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
