Added the other html pages and linked them

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
+    <link href="todo.html" rel="import" />
+    <link href="tostay.html" rel="import" />
+    <link href="info.html" rel="import" />
+
     <title>Zandvoort</title>
 </head>
 
@@ -32,16 +36,16 @@
               <a href="" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">What to do</a>
+              <a href="todo.html" class="nav-link">What to do</a>
             </li>
             <li class="nav-item">
             <img class="d-none d-lg-block" src="images/logo.png" alt="">
            </li>
            <li class="nav-item">
-            <a href="" class="nav-link">Where to stay</a>
+            <a href="tostay.html" class="nav-link">Where to stay</a>
           </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Practical information</a>
+              <a href="info.html" class="nav-link">Practical information</a>
             </li>
           </ul>
         </div>
