--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <body>
     <nav id="mainNavbar" class="navbar navbar-expand-lg fixed-top d-flex navbar-light">
-        
+
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon">
+          <span class="navbar-toggler-icon ">
             <img class="d-md-block d-md-none navbar-mobile-img" src="images/logo.png" alt="">
           </span>
         </button>
@@ -67,7 +67,9 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, quam vero numquam consectetur, porro, cum aliquam distinctio asperiores necessitatibus repudiandae commodi ab in dolores impedit quos voluptatum quas ipsam deleniti?
             Quas, laborum quis. Hic minus consectetur necessitatibus libero, corporis porro et est sed officiis tenetur. Ab unde dicta iusto debitis, labore corrupti sunt cumque molestias aliquid, nemo vel similique ut.
             Nihil reiciendis explicabo exercitationem atque repellendus similique natus perspiciatis iusto maxime omnis ipsa architecto eligendi quidem delectus deleniti provident cupiditate incidunt laboriosam magni, recusandae consequatur ea autem possimus aliquam. Iste.
-            <div><button type="button" class="btn btn-outline-info">Read about what to do</button></div>
+            <div><button type="button" class="btn btn-outline-info">
+              <a href="todo.html">
+              Read about what to do</a></button></div>
                </div>
             </div>
             </div>
@@ -76,7 +78,7 @@
 
       
         <div class="row align-items-center row-hero">
-          <div class="col-lg-6">
+          <div class="col-lg-6 order-2 order-md-1">
             <div id="headingGroup" class="text-center d-lg-block mt-5">
               <div class="row justify-content-center">
                 <div class="col-10">
@@ -85,12 +87,13 @@
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, quam vero numquam consectetur, porro, cum aliquam distinctio asperiores necessitatibus repudiandae commodi ab in dolores impedit quos voluptatum quas ipsam deleniti?
               Quas, laborum quis. Hic minus consectetur necessitatibus libero, corporis porro et est sed officiis tenetur. Ab unde dicta iusto debitis, labore corrupti sunt cumque molestias aliquid, nemo vel similique ut.
               Nihil reiciendis explicabo exercitationem atque repellendus similique natus perspiciatis iusto maxime omnis ipsa architecto eligendi quidem delectus deleniti provident cupiditate incidunt laboriosam magni, recusandae consequatur ea autem possimus aliquam. Iste.
-              <button type="button" class="btn btn-outline-info">Check out where to stay</button>  
+              <button type="button" class="btn btn-outline-info">
+                <a href="tostay.html">Check out where to stay</a></button>  
                  </div>
               </div>
             </div>
           </div>
-              <div class="col-lg-6 col-img text-center">
+              <div class="col-lg-6 col-img text-center order-1 order-md-2">
                 <img class="img-fluid hero-img" src="images/second-img.png" alt="">
               </div>
         </div>
@@ -108,7 +111,8 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, quam vero numquam consectetur, porro, cum aliquam distinctio asperiores necessitatibus repudiandae commodi ab in dolores impedit quos voluptatum quas ipsam deleniti?
             Quas, laborum quis. Hic minus consectetur necessitatibus libero, corporis porro et est sed officiis tenetur. Ab unde dicta iusto debitis, labore corrupti sunt cumque molestias aliquid, nemo vel similique ut.
             Nihil reiciendis explicabo exercitationem atque repellendus similique natus perspiciatis iusto maxime omnis ipsa architecto eligendi quidem delectus deleniti provident cupiditate incidunt laboriosam magni, recusandae consequatur ea autem possimus aliquam. Iste.
-            <div><button type="button" class="btn btn-outline-info">Find out more</button></div>
+            <div><button type="button" class="btn btn-outline-info">
+              <a href="info.html">Find out more</a></button></div>
                </div>
             </div>
             </div>
